<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="array_theme_black">Black</string>
    <string name="array_theme_dark">Dark</string>
    <string name="array_theme_default">Default</string>
    <string name="array_theme_green">Green</string>
    <string name="array_theme_sepia">Sepia</string>
    <string name="label_all">All items</string>
    <string name="menu_clear_cache">Clear Cache</string>
    <string name="menu_fonts">Fonts</string>
    <string name="menu_help">Help &amp; Feedback</string>
    <string name="menu_image_screen_fit">Image Fit</string>
    <string name="menu_image_show">Show images</string>
    <string name="menu_inverse_page">Inverse page</string>
    <string name="menu_premium">Premium</string>
    <string name="menu_save_page">Save page</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tag">Add tag</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_view">View</string>
    <string name="preference_application_fullscreen_title">Fullscreen</string>
    <string name="preference_application_language_title">Languages</string>
    <string name="preference_application_theme_auto_dark_summary">Select dark theme depending on system settings</string>
    <string name="preference_application_theme_auto_dark_title">Auto Dark Mode</string>
    <string name="preference_application_theme_dark_summary">Select dark theme when auto dark mode is enabled</string>
    <string name="preference_application_theme_dark_title">Dark Theme</string>
    <string name="preference_application_theme_title">Themes</string>
    <string name="preference_article_controls">Article Controls</string>
    <string name="preference_auto_hide_item_controls_summary">Automatically hide controls on scroll</string>
    <string name="preference_auto_hide_item_controls_title">Auto hide controls</string>
    <string name="preference_cache_auto_cleanup_images_summary">How many images (thumbnails) to keep in cache?</string>
    <string name="preference_cache_auto_cleanup_images_title">Auto cleanup image cache</string>
    <string name="preference_cache_auto_cleanup_read_summary">How long to keep cached items after reading?</string>
    <string name="preference_cache_auto_cleanup_read_title">Auto cleanup read items</string>
    <string name="preference_cache_auto_cleanup_unread_summary">How long to keep unread items after syncing?</string>
    <string name="preference_cache_auto_cleanup_unread_title">Auto cleanup unread items</string>
    <string name="preference_cache_db_location_summary">Database storage location</string>
    <string name="preference_cache_db_location_title">Database storage</string>
    <string name="preference_cache_keep_cached_summary">Keep cached items on cleanup</string>
    <string name="preference_cache_keep_cached_title">Keep cached items</string>
    <string name="preference_cache_keep_starred_summary">Keep starred items on cleanup</string>
    <string name="preference_cache_keep_starred_title">Keep starred items</string>
    <string name="preference_cache_offline_location_summary">Offline content storage location</string>
    <string name="preference_cache_offline_location_title">Offline content storage</string>
    <string name="preference_category_article_list">Article List</string>
    <string name="preference_category_article_view">Article View</string>
    <string name="preference_category_auto_cleanup">Auto cleanup</string>
    <string name="preference_category_backup_restore">Backup/Restore</string>
    <string name="preference_category_cache">Cache</string>
    <string name="preference_category_confirmation">Confirmation</string>
    <string name="preference_category_home_view">Home view</string>
    <string name="preference_category_image_cache">Image cache</string>
    <string name="preference_category_mark_as_read">Mark all as read</string>
    <string name="preference_category_notification">Notifications</string>
    <string name="preference_category_offline_reading">Offline Reading</string>
    <string name="preference_category_other">Other</string>
    <string name="preference_category_reading">Reading Preferences</string>
    <string name="preference_category_services">Services</string>
    <string name="preference_category_ui">Look and Feel</string>
    <string name="preference_confirmation_all_summary">Show confirmation dialog for all articles</string>
    <string name="preference_confirmation_sub_summary">Show confirmation dialog for feed or tag</string>
    <string name="preference_confirmation_sub_title">Feed or Tag</string>
    <string name="preference_fab_opacity_title">Opacity</string>
    <string name="preference_fab_position_title">Position</string>
    <string name="preference_fab_style_title">Style</string>
    <string name="preference_hardware_acceleration_summary">Hardware acceleration can improve rendering, but may also cause unwanted behaviours. Turn off if you encounter any issues while viewing articles.</string>
    <string name="preference_hardware_acceleration_title">Hardware acceleration</string>
    <string name="preference_home_hide_article_list_summary">Hide article list pane while sub list is opening</string>
    <string name="preference_home_hide_article_list_title">Hide article list pane</string>
    <string name="preference_home_landscape_dual_pane_summary">Turn on dual pane in landscape mode</string>
    <string name="preference_home_landscape_dual_pane_title">Landscape dual view</string>
    <string name="preference_item_autoload_link_summary">Load article link immediately after entering an article</string>
    <string name="preference_item_autoload_link_title">Autoload article link</string>
    <string name="preference_item_autoload_reading_mode_summary">Automatically load article in reading mode for better reading</string>
    <string name="preference_item_autoload_reading_mode_title">Autoload reading mode</string>
    <string name="preference_item_double_tap_action_summary">Define an action for double-tapping in article view</string>
    <string name="preference_item_double_tap_action_title">Double tap</string>
    <string name="preference_item_inapp_browser_summary">Open url in Chrome Custom Tab instead of external browser</string>
    <string name="preference_item_inapp_browser_title">In-app Browser</string>
    <string name="preference_item_inapp_youtube_summary">Load Youtube video within the app</string>
    <string name="preference_item_inapp_youtube_title">In-app Youtube player</string>
    <string name="preference_item_list_action_title">Quick actions</string>
    <string name="preference_item_list_left_action_summary">Define the left action</string>
    <string name="preference_item_list_left_action_title">Left action</string>
    <string name="preference_item_list_right_action_summary">Define the right action</string>
    <string name="preference_item_list_right_action_title">Right action</string>
    <string name="preference_item_list_volume_key_action_summary">Set volume key action for article list</string>
    <string name="preference_item_list_volume_key_action_title">Volume key (article list)</string>
    <string name="preference_item_load_images_summary">Download and show images</string>
    <string name="preference_item_load_images_title">Load images</string>
    <string name="preference_item_load_link_summary">Define how to load article link</string>
    <string name="preference_item_load_link_title">Load article link</string>
    <string name="preference_item_navigation_gesture_summary">Define gesture behaviours for article view</string>
    <string name="preference_item_navigation_gesture_title">Navigation gestures</string>
    <string name="preference_item_pinch_zoom_summary">Zooming with two fingers. Turn off if you encounter any issues.</string>
    <string name="preference_item_pinch_zoom_title">Pinch zoom</string>
    <string name="preference_item_user_agent_summary">Request the mobile or desktop version of a website</string>
    <string name="preference_item_user_agent_title">User Agent</string>
    <string name="preference_item_volume_key_action_summary">Set volume key action for article view</string>
    <string name="preference_item_volume_key_action_title">Volume key (article view)</string>
    <string name="preference_rich_article_list">Rich Article List</string>
    <string name="preference_rich_article_list_summary">Show articles with snippet and preview thumbnail</string>
    <string name="preference_rich_article_list_title">Enable Rich Article List</string>
    <string name="preference_rich_show_snippet_summary">Show article snippet</string>
    <string name="preference_rich_show_snippet_title">Show Snippet</string>
    <string name="preference_rich_show_thumbnail_summary">Show article preview thumbnail</string>
    <string name="preference_rich_show_thumbnail_title">Show Preview Thumbnail</string>
    <string name="preference_show_feeds_after_mark_all_title">Show feeds after Mark all</string>
    <string name="preference_show_item_bar_summary">Display item bar for editing articles</string>
    <string name="preference_show_item_bar_title">Show item bar</string>
    <string name="preference_show_navigation_bar_summary">Display navigation bar for navigating through articles</string>
    <string name="preference_show_navigation_bar_title">Show navigation bar</string>
    <string name="preference_show_zoom_button_summary">Display zoom buttons</string>
    <string name="preference_show_zoom_button_title">Zoom buttons</string>
    <string name="preference_swipe_action_title">Swipe actions</string>
    <string name="preference_swipe_ltr_summary">Define the action for left to right swiping</string>
    <string name="preference_swipe_ltr_title">Swipe Left to Right</string>
    <string name="preference_swipe_rtl_summary">Define the action for right to left swiping</string>
    <string name="preference_swipe_rtl_title">Swipe Right to Left</string>
    <string name="preference_use_phone_ui_summary">Use phone UI instead of the tablet UI</string>
    <string name="preference_use_phone_ui_title">Use phone UI</string>
    <string name="preference_view_item_list_font_size_summary">Specify article list font size</string>
    <string name="preference_view_item_list_font_size_title">List font size</string>
    <string name="preference_view_nav_bar_summary">Show navigation bar on article view</string>
    <string name="preference_view_nav_bar_title">Navigation bar</string>
    <string name="title_synchronization">Synchronization</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_search">Search</string>
    <string name="view_options">Options</string>
</resources>