<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_home_actions" android:orderInCategory="1" android:title="" app:actionLayout="@layout/actionbar_home_actions_tablet" app:showAsAction="ifRoom" />
    <item android:icon="?actionbarMoreIcon" android:id="@id/menu_home_more" android:orderInCategory="2" android:title="@string/menu_view" app:showAsAction="always">
        <menu>
            <item android:id="@id/menu_feedback" android:title="@string/menu_help" />
            <item android:id="@id/menu_prefs" android:title="@string/menu_settings" />
            <item android:id="@id/menu_theme" android:title="@string/menu_theme" />
            <item android:id="@id/menu_clear_cache" android:title="@string/menu_clear_cache" />
            <item android:id="@id/menu_logout" android:title="@string/txt_logout" />
            <item android:id="@id/menu_buy" android:title="@string/menu_premium" />
        </menu>
    </item>
    <item android:id="@id/menu_item_info" android:visible="false" android:orderInCategory="11" app:actionLayout="@layout/actionbar_item_view_tablet" app:showAsAction="always" />
    <item android:icon="?actionbarMoreIcon" android:id="@id/menu_item_more" android:visible="false" android:orderInCategory="12" android:title="@string/menu_view" app:showAsAction="always">
        <menu>
            <item android:id="@id/menu_image_fit" android:title="@string/menu_image_screen_fit" />
            <item android:id="@id/menu_inverse_page" android:title="@string/menu_inverse_page" />
            <group android:checkableBehavior="all">
                <item android:id="@id/menu_load_images" android:title="@string/menu_image_show" />
            </group>
            <item android:id="@id/menu_fonts" android:title="@string/menu_fonts" />
            <item android:id="@id/menu_controls" android:title="@string/preference_article_controls" />
        </menu>
    </item>
</menu>
