<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_action" android:title="@string/view_options" app:actionLayout="@layout/actionbar_home_actions" app:showAsAction="always" />
    <item android:icon="@drawable/abc_ic_search_api_material" android:id="@id/menu_search" android:title="@string/txt_search" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_settings" android:id="@id/menu_feedback" android:title="@string/menu_help" app:showAsAction="never" />
    <item android:id="@id/menu_prefs" android:title="@string/menu_settings" app:showAsAction="never" />
    <item android:id="@id/menu_theme" android:title="@string/menu_theme" app:showAsAction="never" />
    <item android:id="@id/menu_clear_cache" android:title="@string/menu_clear_cache" app:showAsAction="never" />
    <item android:id="@id/menu_logout" android:title="@string/txt_logout" app:showAsAction="never" />
    <item android:id="@id/menu_buy" android:title="@string/menu_premium" app:showAsAction="never" />
</menu>
